# modules/my_health/app/controllers/my_health/v1/messages_controller.rb
@@ -152,7 +152,9 @@ module MyHealth
       def message_params
         @message_params ||= begin
           params[:message] = JSON.parse(params[:message]) if params[:message].is_a?(String)
-          params.require(:message).permit(:draft_id, :category, :body, :recipient_id, :subject, :station_number)
+          permitted_attributes = %i[draft_id category body recipient_id subject station_number]
+          permitted_attributes << :prescription_id if action_name == 'create'
+          params.require(:message).permit(*permitted_attributes)
         end
       end
 
